--- a/src/index.css
+++ b/src/index.css
@@ -62,3 +62,56 @@ All colors MUST be HSL.
     @apply bg-background text-foreground;
   }
 }
+
+@font-face {
+  font-family: 'Fort';
+  src: url(../src/fonts/FortTT-Book.ttf) format('truetype');
+}
+
+body{
+  font-family: Fort, serif;
+  font-size:13px;
+  color:#1c242c;
+}
+
+.navlogo{
+  background-image: url("../src/images/logo.png");
+  margin-top:6px;
+  width:36px;
+  height:28px;
+  display:inline-block;
+  background-repeat:no-repeat;
+  background-size: 36px 28px;
+}
+
+.bg-gradient-primary{
+  background:#006E74
+}
+
+.text-primary-foreground{
+  background:#006E74;
+}
+
+button.bg-primary:hover{
+  background:#003C51;
+}
+
+a.text-muted-foreground{
+  background:#C8C8C8;
+  color:#1c242c;
+}
+
+a.text-muted-foreground:hover{
+  background:#7A7480;
+  color:#fff;
+}
+
+.text-secondary-foreground{
+  background:#0097AC;
+  border:1px solid #fff;
+}
+
+.text-card-foreground {
+  background: #F2F7F8;
+  border: 1px solid #006E74;
+}
